[tool.poetry]
name = "sanscript-cli"
version = "0.2.1"
description = "A CLI for indic script transliteration based on the indic-transliteration python library."
authors = ["Prasanna Venkatesh T S <vipranarayan14@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
sanscript = "sanscript_cli.main:app"

[tool.poetry.dependencies]
python = "^3.6.2"
typer = "^0.3.2"
indic-transliteration = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^21.5b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
